Home page created

--- a/public/customer/css/home.css
+++ b/public/customer/css/home.css
@@ -1,11 +1,100 @@
-*{
-    margin:0;
-    padding:0;
+/* Global styles */
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: 'Signika';
+    font-family: 'Signika', sans-serif;
 }
-.home-page{
+
+.home-page {
     height: 100%;
+    background: rgb(251, 209, 255);
+}
+
+/* Slider image styling */
+.slider-img {
+    width: 100%;
+    height: 680px;
+    object-fit: cover;
+}
+
+/* Slider caption styles */
+/* .carousel-caption {
+    padding-bottom: 220px;
+    color: #ffffff;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: "Playfair Display", serif;
+} */
+
+.slider-title {
+    color: rgb(242, 136, 7);
+    font-size: 70px;
+    font-weight: bold;
+    font-family: "Playfair Display", serif;
+    animation: fadeInUp 1.5s ease;
+}
+
+.carousel-caption p {
+    font-size: 40px;
+    font-weight: 400;
+    animation: fadeInUp 2s ease;
+    font-family: "Playfair Display", serif;
+    color: rgb(60, 2, 52);
+}
+
+/* Animations */
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.carousel-caption {
+    margin-bottom: 214px;
+    background-color: rgba(148, 140, 140, 0.7);
+    /* Semi-transparent black background */
+    border: 2px solid rgba(254, 148, 19, 0.716);
+    /* Orange border */
+    border-radius: 10px;
+    /* Rounded corners */
+    padding-bottom: 18px;
+    color: #ffffff;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: "Playfair Display", serif;
+}
+
+/* Additional Carousel styles */
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+}
+
+.carousel-indicators li {
+    background-color: #f28307;
+}
+
+/* Media query for responsiveness */
+@media (max-width: 767px) {
+    .slider-img {
+        height: 400px;
+    }
+
+    .carousel-caption {
+        padding-bottom: 100px;
+    }
+
+    .slider-title {
+        font-size: 40px;
+    }
 }
 
 
@@ -13,32 +102,34 @@
 /* .navbar-light.sticky-header{
     background-color:#a6c7ea;
 } */
-.navbar-light .navbar-nav .nav-link{
-  color: rgb(15, 0, 0);
-  font-size: 19px;
-  padding-right: 15px;
-  font-family: sans-serif;
-  
+.navbar-light .navbar-nav .nav-link {
+    color: rgb(15, 0, 0);
+    font-size: 19px;
+    padding-right: 15px;
+    font-family: sans-serif;
+
 }
 
-.navbar-light .navbar-nav .nav-link:hover{
-    color:#ffffff;
+.navbar-light .navbar-nav .nav-link:hover {
+    color: #ffffff;
 }
 
-.navbar-light.sticky-header  .navbar-nav .nav-link {
+.navbar-light.sticky-header .navbar-nav .nav-link {
     color: rgb(252, 243, 243);
 }
-.navbar-light .navbar-brand{
-  color: #ffffff;
-  font-size: 34px;
-  padding-right: 20px;
-  font-family: sans-serif;
+
+.navbar-light .navbar-brand {
+    color: #ffffff;
+    font-size: 34px;
+    padding-right: 20px;
+    font-family: sans-serif;
 }
-.navbar-light.sticky-header.navbar-light .navbar-brand{
+
+.navbar-light.sticky-header.navbar-light .navbar-brand {
     color: #f2f4f8;
 }
 
-.nav-link-groups{
+.nav-link-groups {
     border: none;
     outline: none;
     height: 50px;
@@ -53,27 +144,27 @@
     margin-top: -10px;
     margin-left: 500px;
     cursor: pointer;
-  }
+}
 
 /* sliderimage */
 
-.carousel-caption{
-        padding-bottom:210px;
-        color:#ffffff;
-        font-size: 30px;
-        font-weight: bold;
-        font-family:"Playfair Display", serif;
- }
+/* .carousel-caption {
+    padding-bottom: 210px;
+    color: #ffffff;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: "Playfair Display", serif;
+} */
 
-.slider-title{
-    padding-bottom:2px;
-    color: rgb(242, 136, 7);
-    font-size: 85px;
+.slider-title {
+    padding-bottom: 2px;
+    color: rgb(135, 0, 79);
+    font-size: 70px;
     font-weight: bold;
     font-family: "Playfair Display", serif;
 }
 
-.slider-img {  
+.slider-img {
     width: 100%;
     height: 680px;
     object-fit: cover;
@@ -85,38 +176,38 @@
     font-size: 34px;
     font-weight: bold;
     font-family: "Playfair Display", serif;
-    color: #3e74ad;
+    color: rgb(135, 0, 79);
 }
 
-/* .room-section-heading:after {
-   content: '';
-   width: 90px;
-   position: absolute;
-   left: 45%;
-   margin-bottom: 10px;
-   display: block;
-   border-bottom: 2px solid #c5874e;
-} */
-  
+.room-section-heading:after {
+    content: '';
+    width: 90px;
+    position: absolute;
+    left: 47%;
+    margin-bottom: 10px;
+    display: block;
+    border-bottom: 2px solid #c5874e;
+}
 
-.section-site{
+
+.section-site {
     padding: 60px;
-    background: whitesmoke;
+    background: rgb(251, 209, 255);
 }
 
-.hotel-room .hotel-room-body{
-    padding: 30px;    
-    
+.hotel-room .hotel-room-body {
+    padding: 30px;
+
 }
-       
-.hotel-room{
+
+.hotel-room {
     text-align: center;
-    background:#ffffff;
+    background: #ffffff;
     cursor: pointer;
     transition: transform 0.7s ease-in-out;
 }
 
-.hotel-room:hover {         
+.hotel-room:hover {
     transform: scale(1.1);
 }
 
@@ -124,48 +215,49 @@
 /* about */
 
 #about .container {
-    max-width: 930px;
-    background: whitesmoke;
-  }
-  
-  #about p {
-    font-size: 1.2em;
-  }
-  .btn{
-    margin-bottom: 50px;
-  }
+    background: rgb(251, 209, 255);
+}
 
-          /* footer */
-       
-.row-custom{
+#about p {
+    font-size: 1.2em;
+}
+
+.btn {
+    margin-bottom: 50px;
+}
+
+/* footer */
+
+.row-custom {
     display: flex;
     flex-wrap: wrap;
 }
 
-ul{
+ul {
     list-style: none;
-} 
+}
 
-.footer{
-    background-color: #a6c7ea;
+.footer {
+    background: rgb(246, 149, 255);
     padding: 20px 10px;
 }
 
-.footer-col{
+.footer-col {
     width: 25%;
     padding: 0 15px;
 }
 
-.footer-col h4{
+.footer-col h4 {
     font-size: 20px;
-    color: rgb(0, 0, 0);
+    color: rgb(135, 0, 79);
     text-transform: capitalize;
     margin-bottom: 35px;
     font-weight: 800;
     position: relative;
+    font-family: "Playfair Display", serif;
 }
 
-/* .footer-col h4::before{
+.footer-col h4::before {
     content: '';
     position: absolute;
     left: 0;
@@ -174,13 +266,17 @@ ul{
     height: 2px;
     box-sizing: border-box;
     width: 50px;
-} */
+}
 
-.footer-col ul li:not(:last-child){
+.footer-col ul li:not(:last-child) {
     margin-bottom: 10px;
 }
 
-.footer-col ul li a{
+.footer-col p {
+    font-family: "Playfair Display", serif;
+}
+
+.footer-col ul li a {
     font-size: 16px;
     text-transform: capitalize;
     text-decoration: none;
@@ -188,21 +284,21 @@ ul{
     color: rgb(0, 0, 0);
     display: block;
     transition: all 0.3s ease;
- 
+    font-family: "Playfair Display", serif;
 }
 
-.footer-col ul li a:hover{
+.footer-col ul li a:hover {
     color: rgb(0, 0, 0);
     padding-left: 8px;
 }
 
-.footer-col .social-links a{
+.footer-col .social-links a {
     display: inline-block;
     height: 42px;
     width: 42px;
     font-size: 1.5em;
-    background-color: rgb(53, 178, 195);
-    margin: 0 10px 10px 0;
+    background-color: rgb(255, 190, 254);
+    margin: 5px 10px 10px 0;
     text-align: center;
     line-height: 40px;
     border-radius: 50%;
@@ -210,22 +306,22 @@ ul{
     transition: all 0.5s ease;
 }
 
-.footer-col .social-links a:hover{
+.footer-col .social-links a:hover {
     color: #24262b;
-    background-color: #ffffff;
+    background-color: #990070;
 }
 
 
 .footer-alt {
-padding-top: 40px;
-color: rgb(0, 0, 0);
-font-family: "poppins";
-font-size: 17px;
-margin: 0px 5px;
-margin-top: 1px;
+    padding-top: 40px;
+    color: rgb(0, 0, 0);
+    font-size: 17px;
+    margin: 0px 5px;
+    margin-top: 1px;
+    font-family: "Playfair Display", serif;
 }
 
-                              /* reservation */
+/* reservation */
 
 .reserve-h1 {
     padding-top: 60px;
@@ -233,14 +329,14 @@ margin-top: 1px;
     padding-left: 620px;
     font-size: 34px;
     font-weight: bold;
-    font-family:"Playfair Display", serif;
+    font-family: "Playfair Display", serif;
     color: #3e74ad;
 }
 
 
-.reserve-h1:after{
+.reserve-h1:after {
     content: '';
-    width: 80px;        
+    width: 80px;
     position: absolute;
     left: 650px;
     margin-bottom: 20px;
@@ -249,7 +345,7 @@ margin-top: 1px;
 }
 
 
-.home-image{
+.home-image {
     width: 100%;
     object-fit: cover;
     height: 203px;
@@ -257,32 +353,33 @@ margin-top: 1px;
 
 
 
-.home-map{
-    background:whitesmoke;
+.home-map {
+    background: rgb(251, 209, 255);
 }
 
-.homemap-title{
+.homemap-title {
     font-size: 34px;
     font-family: "Playfair Display", serif;
     font-weight: bold;
-    color: #3e74ad;
-   padding-bottom: 30px;
-   padding-top: 60px;
+    color: rgb(135, 0, 79);
+    padding-bottom: 30px;
+    padding-top: 60px;
 
 }
 
-.homemap-title:after{
+.homemap-title:after {
     content: '';
-    width: 80px;        
+    width: 80px;
     position: absolute;
     left: 47%;
     margin-bottom: 5px;
     display: block;
     border-bottom: 2px solid #c5874e;
 }
-.hopemap-details{
-font-size: 18px;
-padding-bottom: 30px;
+
+.hopemap-details {
+    font-size: 18px;
+    padding-bottom: 30px;
 }
 
 
@@ -291,8 +388,8 @@ padding-bottom: 30px;
 @media only screen and (max-width: 767px) {
 
     .navbar-light .navbar-nav .nav-link {
-        padding-right: 10px; 
-        font-size: 16px; 
+        padding-right: 10px;
+        font-size: 16px;
     }
 
     .navbar-light .navbar-brand {
@@ -301,7 +398,7 @@ padding-bottom: 30px;
     }
 
     .custom-logo img {
-        margin-left: 20px; 
+        margin-left: 20px;
     }
 
     /* .carousel-caption {
@@ -322,35 +419,35 @@ padding-bottom: 30px;
     }
 
     .section-site {
-        padding: 20px; 
+        padding: 20px;
     }
 
     .hotel-room .hotel-room-body {
-        padding: 20px; 
+        padding: 20px;
     }
 
 
     .footer-col {
         width: 100%;
-        padding: 0; 
+        padding: 0;
     }
 
     .footer-col h4::before {
-        width: 80px; 
+        width: 80px;
     }
 
     /* Add media query for smaller screens */
-@media only screen and (max-width: 767px) {
-    .home-map {
-     
-        width: 100%;
-    }
+    @media only screen and (max-width: 767px) {
+        .home-map {
 
-    .homemap-title {
-        font-size: 20px;
-        padding-top: 15px;
+            width: 100%;
+        }
+
+        .homemap-title {
+            font-size: 20px;
+            padding-top: 15px;
+        }
     }
-}
 }
 
 
@@ -358,59 +455,60 @@ padding-bottom: 30px;
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     .navbar-light .navbar-nav .nav-link {
         font-size: 16px;
-        padding-right: 10px; 
+        padding-right: 10px;
     }
 
     .navbar-light .navbar-brand {
-        font-size: 24px; 
-        padding-right: 10px; 
+        font-size: 24px;
+        padding-right: 10px;
     }
 
     .custom-logo img {
-        margin-left: 300px; 
+        margin-left: 300px;
     }
 
     .carousel-caption {
-        padding-bottom: 120px; 
-        font-size: 24px; 
+        padding-bottom: 2px;
+        font-size: 24px;
     }
 
     .slider-title {
-        font-size: 40px; 
+        font-size: 40px;
     }
 
     .slider-img {
-        height: 400px; 
+        height: 400px;
     }
 
     .room-section-heading {
-        font-size: 24px; 
+        font-size: 24px;
     }
 
     .section-site {
-        padding: 40px; 
+        padding: 40px;
     }
 
     .hotel-room .hotel-room-body {
-        padding: 20px; 
+        padding: 20px;
     }
 
 
     .footer-col {
-        width: 100%; 
-        padding: 0 10px; 
+        width: 100%;
+        padding: 0 10px;
     }
 
     .footer-col h4::before {
-        width: 30px; 
+        width: 30px;
     }
 
-    .home-map{
+    .home-map {
         width: 100%;
     }
+
     .homemap-title {
-        font-size: 28px; 
-        padding-top: 20px; 
-        padding-bottom: 20px; 
+        font-size: 28px;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 }
